# pzql

./: .gitignore  CLAUDE.md  README.md  biome.json  lefthook.yml  package.json  theme.json
.claude/: settings.json  settings.local.json
.claude/agents/: tauri-reviewer.md
.claude/hooks/: index.ts  lib.ts  package.json
.claude/hooks/notification/: play-sound.sh
.claude/hooks/pre-tool-use/: block-co-authored-by.sh  block-git-no-verify.sh  block-git-worktree.sh  block-no-verify.sh  block-sonos-word.sh
.claude/skills/commit/: SKILL.md
.github/workflows/: ci.yml
.zed/: settings.json
docs/plans/: 2026-02-21-dual-transport-ipc-design.md  2026-02-21-dual-transport-ipc.md  2026-02-21-product-vision.md  2026-02-21-unified-dev-workflow-impl.md  2026-02-21-unified-dev-workflow.md
src/: App.tsx  bindings.ts  index.css  ipc.ts  main.tsx  vite-env.d.ts  ws-bindings.ts  ws-client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/pzql-ipc/: Cargo.toml
src-tauri/crates/pzql-ipc/src/: lib.rs
src-tauri/crates/pzql-macros/: Cargo.toml
src-tauri/crates/pzql-macros/src/: command.rs  event.rs  lib.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/dev_server/: server.rs
src-tauri/tests/: command_macro.rs  event_macro.rs
src/components/: CounterDemo.tsx
src/stores/: counter.ts
src/themes/: hyper.ts  index.ts
