[workspace]
members = [".", "crates/pzql-ipc", "crates/pzql-macros"]
resolver = "2"

[package]
name = "pzql"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "pzql_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pzql-ipc = { path = "crates/pzql-ipc" }
pzql-macros = { path = "crates/pzql-macros" }
inventory = "0.3"
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"

[features]
dev-server = []

[dependencies.axum]
version = "0.8"
features = ["ws"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.futures-util]
version = "0.3"
